--- a/css/style2.css
+++ b/css/style2.css
@@ -5,16 +5,22 @@ header {
 
 main img {
   display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
+  width: 15em;
+  height: 18em;
+}
+
+#images {
+width: fit-content;
+margin-right: auto;
+margin-left: auto;
 }
 
 h1 {
   font-family: 'Courgette', cursive;
   color:black;
   text-align: center;
-  width: 45em;
+  width: 43em;
+  font-size: 2em;
 }
 
 a {
@@ -35,38 +41,43 @@ nav {
   width: fit-content;
 }
 
+ul {
+  font-family: 'Lato', sans-serif;
+  margin-left: 19em;
+}
+
 main h2 {
   font-family: 'Lobster Two', cursive;
   color: rgb(255, 191, 107);
-  font-size: xx-large;
+  font-size: 2em;
 }
 
 main h3 {
   font-family: 'Lobster Two', cursive;
   text-decoration: underline;
   color: rgb(255, 191, 107);
-  font-size:large;
+  font-size:1.3em;
+  margin-left: 15.5em;
 }
 
 main h4 {
   font-family: 'Lobster Two', cursive;
   color:  rgb(255, 191, 107);
   font-size: large;
+  margin-left: 18em;
 }
 
 main p {
   font-family: 'Lato', sans-serif;
-}
-
-main ul {
-  font-family: 'Lato', sans-serif;
-  color: black;
+  margin-right: 20em;
+  margin-left: 20em;
 }
 
 #list {
   background-color: rgb(255, 191, 107);
   padding-left: 1em;
   color: black;
+  width: 33em;
 }
 
 footer {
